tests/ui/standard_request_rejects_vec_boxed_constraints.stderr
error[E0277]: the trait bound `Vec<Box<dyn cohort_matching::Constraint<BaseRecord>>>: ConstraintGroup<BaseRecord>` is not satisfied
  --> tests/ui/standard_request_rejects_vec_boxed_constraints.rs:17:51
   |
17 |     let _ = match_standard(&anchors, &candidates, request);
   |             --------------                        ^^^^^^^ the trait `ConstraintGroup<BaseRecord>` is not implemented for `Vec<Box<dyn cohort_matching::Constraint<BaseRecord>>>`
   |             |
   |             required by a bound introduced by this call
   |
   = help: the following other types implement trait `ConstraintGroup<R>`:
             &G
             ()
             (C1, C2, C3)
             (C1, C2, C3, C4)
             (C1, C2, C3, C4, C5)
             (C1, C2, C3, C4, C5, C6)
             (C1, C2, C3, C4, C5, C6, C7)
             (C1, C2, C3, C4, C5, C6, C7, C8)
           and $N others
note: required by a bound in `match_standard`
  --> src/matching/engine.rs
   |
   | pub fn match_standard<
   |        -------------- required by a bound in this function
...
   |     G: ConstraintGroup<R> + ?Sized,
   |        ^^^^^^^^^^^^^^^^^^ required by this bound in `match_standard`
